care/force-app/main/default/objects/OrgNotes__c/OrgNotes__c.object-meta.xml
<CustomObject>
    <description>Notes and Messages for specific profiles.</description>
    <label>OrgNotes</label>
    <nameField>
        <displayFormat>ON-{0000}</displayFormat>
        <label>OrgNotes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrgNotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>