care/force-app/main/default/objects/OrgNotes__c/fields/grouplabel__c.field-meta.xml
<CustomField>
    <fullName>grouplabel__c</fullName>
    <description>Name of the receivergroup</description>
    <label>Grouplabel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>