care/force-app/main/default/objects/OrgNotes__c/fields/message__c.field-meta.xml
<CustomField>
    <fullName>message__c</fullName>
    <label>Message</label>
    <type>TextArea</type>
</CustomField>