care/force-app/main/default/objects/OrgNotes__c/fields/RecordtypeID_18__c.field-meta.xml
<CustomField>
    <fullName>RecordtypeID_18__c</fullName>
    <description>Shows the converted 15-digit record type id of the object orgnoteswith the accordingly calculated 18-digits. 
This is used in the Orgnotes-Controller Apex Class to get the profile of the current user.</description>
    <formula>CASESAFEID (RecordTypeId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18Digit-RecordtypeID</label>
    <type>Text</type>
</CustomField>