care/force-app/main/default/objects/OrgNotes__c/recordTypes/International_Operations_Team.recordType-meta.xml
<RecordType>
    <fullName>International_Operations_Team</fullName>
    <active>true</active>
    <description>International E-Mail and Call-Center Team Messages</description>
    <label>International Operations Team</label>
</RecordType>