care/force-app/main/default/objects/OrgNotes__c/recordTypes/International_WPS_Service_Ops.recordType-meta.xml
<RecordType>
    <fullName>International_WPS_Service_Ops</fullName>
    <active>true</active>
    <description>Used for International WPS Service Accounts</description>
    <label>International WPS Service Ops</label>
</RecordType>