care/force-app/main/default/objects/OrgNotes__c/recordTypes/OperationsTeam.recordType-meta.xml
<RecordType>
    <fullName>OperationsTeam</fullName>
    <active>true</active>
    <description>E-Mail and Call-Center Team Messages</description>
    <label>OperationsTeam</label>
</RecordType>