care/force-app/main/default/objects/OrgNotes__c/recordTypes/SysAdmins.recordType-meta.xml
<RecordType>
    <fullName>SysAdmins</fullName>
    <active>true</active>
    <description>Messages for System Administrators</description>
    <label>SysAdmins</label>
</RecordType>